--- a/kiosk/Dockerfile.template
+++ b/kiosk/Dockerfile.template
@@ -16,6 +16,7 @@ COPY --from=builder /go/src/github.com/mozz100/tohora /home/chromium/tohora
 
 COPY launch.sh /home/chromium/
 
+ADD TwitterColorEmoji-SVGinOT-Linux-13.0.1.tar.gz /TwitterColorEmoji-SVGinOT-Linux-13.0.1/
 # replace command that runs in start script
 COPY alt_start.sh /usr/src/app/
 RUN sed -i '$d' /usr/src/app/start.sh
